--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -33,7 +33,7 @@
 
     @media only screen and (min-width: 1024px) {
         .page-banner h2 {
-            font-size: 48px;
+            font-size: 40px;
         }
     }
 
@@ -43,7 +43,7 @@
     }
 
     .section-heading {
-        font-size: 48px;
+        font-size: 40px;
         text-indent: -0.08em;
         line-height: 1.2;
     }
